# final

./: .cproject  .project  CMakeLists.txt  KDArray.c  KDArray.h  KDTree.c  KDTree.h  SPBPriorityQueue.c  SPBPriorityQueue.h  SPConfig.c  SPConfig.h  SPConfigAux.c  SPConfigAux.h  SPImageProc.cpp  SPImageProc.h  SPList.c  SPList.h  SPListElement.c  SPListElement.h  SPPoint.c  configFile3_valid.txt  main.cpp  mainAux.c  mainAux.h  makefile  partners.txt  query.c  query.h  spcbir.config  test.py  test1.config
Debug/: SPConfig.d  finalProject  makefile  subdir.mk
Debug/unit_tests/: SPConfig_unit_test.d  subdir.mk
images/: img0.feats  img1.feats  img10.feats  img11.feats  img12.feats  img13.feats  img14.feats  img15.feats  img16.feats  img2.feats  img3.feats  img4.feats  img5.feats  img6.feats  img7.feats  img8.feats  img9.feats  logger_output.txt  pca.yml
unit_tests/: SPConfig_unit_test.c  configFile1.txt  configFile2.txt  configFile3_valid.txt  mainAux_unit_test.c  spcbir.config
yuval/: img0.feats  img1.feats  img10.feats  img11.feats  img12.feats  img13.feats  img14.feats  img15.feats  img16.feats  img17.feats  img18.feats  img19.feats  img2.feats  img20.feats  img21.feats  img22.feats  img23.feats  img24.feats  img25.feats  img26.feats  img27.feats  img28.feats  img29.feats  img3.feats  img30.feats  img31.feats  img32.feats  img33.feats  img34.feats  img35.feats  img36.feats  img37.feats  img38.feats  img39.feats  img4.feats  img40.feats  img41.feats  img42.feats  img43.feats  img44.feats  (+63 more)
